// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package Parse alternative 1`] = `
"{
  \\"name\\": \\"@scope/package\\",
  \\"version\\": \\"1.0.1\\",
  \\"description\\": \\"package description\\",
  \\"license\\": \\"SEE LICENSE IN LICENSE_FILE\\",
  \\"private\\": true,
  \\"homepage\\": \\"https://github.com/owner/project#readme\\",
  \\"author\\": \\"Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)\\",
  \\"contributors\\": [
    \\"Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)\\"
  ],
  \\"maintainers\\": [
    \\"Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)\\"
  ],
  \\"keywords\\": [
    \\"jest\\",
    \\"test\\"
  ],
  \\"funding\\": [
    {
      \\"url\\": \\"http://example.com/donate\\",
      \\"type\\": \\"individual\\"
    },
    \\"http://example.com/donateAlso\\",
    {
      \\"url\\": \\"https://www.patreon.com/my-account\\",
      \\"type\\": \\"patreon\\"
    }
  ],
  \\"types\\": \\"lib/index.d.ts\\",
  \\"browser\\": \\"lib/index.js\\",
  \\"type\\": \\"module\\",
  \\"files\\": [
    \\"__tests__/*.*\\"
  ],
  \\"workspaces\\": [
    \\"./packages/*\\"
  ],
  \\"directories\\": {
    \\"bin\\": \\"local/binaries\\",
    \\"jars\\": \\"java\\",
    \\"lib\\": \\"src/lib\\"
  },
  \\"imports\\": {
    \\"#dep\\": {
      \\"node\\": \\"dep-node-native\\",
      \\"default\\": \\"./dep-polyfill.js\\"
    },
    \\"#internal/*\\": \\"./src/internal/*.js\\"
  },
  \\"exports\\": {
    \\"node\\": {
      \\"import\\": \\"./feature-node.mjs\\",
      \\"require\\": \\"./feature-node.cjs\\"
    },
    \\"./feature\\": {
      \\"node\\": \\"./feature-node.js\\",
      \\"default\\": \\"./feature.js\\"
    },
    \\"default\\": \\"./feature.mjs\\"
  },
  \\"bin\\": {
    \\"name\\": \\"./path/to/program/index.js\\",
    \\"shortname\\": \\"./path/to/program/index.js\\"
  },
  \\"man\\": [
    \\"./man/bar.1\\",
    \\"./man/foo.1\\"
  ],
  \\"repository\\": \\"gitlab:user/repo\\",
  \\"config\\": {
    \\"port\\": \\"8080\\"
  },
  \\"publishConfig\\": {
    \\"allow-same-version\\": true
  },
  \\"os\\": [
    \\"!win32\\",
    \\"darwin\\",
    \\"linux\\"
  ],
  \\"cpu\\": [
    \\"!arm\\",
    \\"ia32\\",
    \\"x64\\"
  ],
  \\"engines\\": {
    \\"node\\": \\">=0.10.3 <15\\"
  },
  \\"scripts\\": {
    \\"compress\\": \\"{{ run command to compress files }}\\",
    \\"prepare\\": \\"command -o lib/ -c src/index.js\\"
  },
  \\"dependencies\\": {
    \\"asd\\": \\"http://asdf.com/asdf.tar.gz\\",
    \\"bar\\": \\">=1.0.2 <2.1.2\\",
    \\"baz\\": \\">1.0.2 <=2.3.4\\",
    \\"boo\\": \\"2.0.1\\",
    \\"dyl\\": \\"file:../dyl\\",
    \\"elf\\": \\"~1.2.3\\",
    \\"foo\\": \\"1.0.0 - 2.9999.9999\\",
    \\"lat\\": \\"latest\\",
    \\"qux\\": \\"<1.0.0 || >=2.3.1 <2.4.5 || >=2.5.2 <3.0.0\\",
    \\"thr\\": \\"3.3.x\\",
    \\"til\\": \\"~1.2\\",
    \\"two\\": \\"2.x\\"
  },
  \\"devDependencies\\": {
    \\"super-script\\": \\"~1.6.3\\"
  },
  \\"peerDependencies\\": {
    \\"soy-milk\\": \\"1.2\\",
    \\"tea\\": \\"2.x\\"
  },
  \\"peerDependenciesMeta\\": {
    \\"soy-milk\\": {
      \\"optional\\": true
    }
  },
  \\"bundledDependencies\\": [
    \\"render-blender\\",
    \\"super-streams\\"
  ],
  \\"optionalDependencies\\": {
    \\"some-pkg\\": \\"1.x\\"
  }
}"
`;

exports[`Package Parse base 1`] = `
"{
  \\"name\\": \\"test\\",
  \\"version\\": \\"1.0.1\\",
  \\"description\\": \\"package description\\",
  \\"license\\": \\"(MIT OR Apache-2.0)\\",
  \\"homepage\\": \\"https://github.com/owner/project#readme\\",
  \\"author\\": \\"Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)\\",
  \\"contributors\\": [
    \\"Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)\\"
  ],
  \\"maintainers\\": [
    \\"Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)\\"
  ],
  \\"keywords\\": [
    \\"jest\\",
    \\"test\\"
  ],
  \\"types\\": \\"lib/index.d.ts\\",
  \\"type\\": \\"module\\",
  \\"files\\": [
    \\"__tests__/*.*\\"
  ],
  \\"workspaces\\": [
    \\"./packages/*\\"
  ],
  \\"directories\\": {
    \\"bin\\": \\"local/binaries\\",
    \\"jars\\": \\"java\\",
    \\"lib\\": \\"src/lib\\"
  },
  \\"exports\\": \\"./lib/index.js\\",
  \\"bin\\": {
    \\"test\\": \\"lib/index.js\\"
  },
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"https://github.com/facebook/react.git\\",
    \\"directory\\": \\"packages/react-dom\\"
  },
  \\"config\\": {
    \\"port\\": \\"8080\\"
  },
  \\"publishConfig\\": {
    \\"allow-same-version\\": true
  },
  \\"os\\": [
    \\"!win32\\",
    \\"darwin\\",
    \\"linux\\"
  ],
  \\"cpu\\": [
    \\"!arm\\",
    \\"ia32\\",
    \\"x64\\"
  ],
  \\"engines\\": {
    \\"node\\": \\">=0.10.3 <15\\"
  },
  \\"scripts\\": {
    \\"compress\\": \\"{{ run command to compress files }}\\",
    \\"prepare\\": \\"command -o lib/ -c src/index.js\\"
  },
  \\"dependencies\\": {
    \\"asd\\": \\"http://asdf.com/asdf.tar.gz\\",
    \\"bar\\": \\">=1.0.2 <2.1.2\\",
    \\"baz\\": \\">1.0.2 <=2.3.4\\",
    \\"boo\\": \\"2.0.1\\",
    \\"dyl\\": \\"file:../dyl\\",
    \\"elf\\": \\"~1.2.3\\",
    \\"foo\\": \\"1.0.0 - 2.9999.9999\\",
    \\"lat\\": \\"latest\\",
    \\"qux\\": \\"<1.0.0 || >=2.3.1 <2.4.5 || >=2.5.2 <3.0.0\\",
    \\"thr\\": \\"3.3.x\\",
    \\"til\\": \\"~1.2\\",
    \\"two\\": \\"2.x\\"
  },
  \\"devDependencies\\": {
    \\"super-script\\": \\"~1.6.3\\"
  },
  \\"peerDependencies\\": {
    \\"soy-milk\\": \\"1.2\\",
    \\"tea\\": \\"2.x\\"
  },
  \\"peerDependenciesMeta\\": {
    \\"soy-milk\\": {
      \\"optional\\": true
    }
  },
  \\"bundledDependencies\\": [
    \\"render-blender\\",
    \\"super-streams\\"
  ],
  \\"optionalDependencies\\": {
    \\"some-pkg\\": \\"1.x\\"
  }
}"
`;
